[package]
name = "icp_token_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.10.10"
ic-cdk = "0.15.0"
ic-cdk-macros = "0.15.0"
serde = "1.0.204"

#[lib]
#path="src/main.rs"
#crate-type = ["cdylib", "rlib"]
